tests/invalids/twoMains.gt
proc main()
    int m;
begin
    m := 1;
end

proc main()
    int m;
begin 
    m := 1;
end
